--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 /.gradle/
 /build/
 /build/classes/java/main/
+/.idea/.gitignore
+/.idea/compiler.xml
+/.idea/gradle.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/uiDesigner.xml
